# RAG-PIPELINE

./: .gitignore  LOCAL_TEST_GUIDE.md  RAG_SETUP.md  README.md  index.html  main.py  pyproject.toml  render.yml  requirements.txt  test_rag_pipeline.py  test_security_detailed.py
.github/workflows/: deploy-ui.yml
app/: augmentated_generation.py  config.py  document_loader.py  embedding.py  langsmith_setup.py  main.py  models.py  monitoring.py  rag_agent.py  rag_supabase.py  retriver.py  security.py  supabase_connection.py  vector_store.py
bm25_cache/: bm25.pkl  bm25_state.json
chroma_db/09e8f503-b493-4486-91d1-24d68df28dd5/: index_metadata.pickle
docs/: README.md  serve.py
production_rag/: augmentated_generation.py  embedding.py  langsmith_setup.py  rag_supabase.py  supabase_connection.py
rag_basic/: compare_search.py  retriver.py  vector_store.py
scaling_rag/: advanced_rag.py  cost_optimization.py
scripts/: setup_rag.py
tests/: test_rag_not_found.py  test_rag_pipeline.py  test_security.py  test_security_cache_integration.py
ui/: index.html
