[project]
name = "production-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.0,<2.0.0",
    "langchain>=1.2.0,<2.0.0",
    "langchain-anthropic>=0.4.0",
    "langchain-chroma>=1.1.0,<2.0.0",
    "langchain-classic>=1.0.0",
    "langchain-core>=1.3.0,<2.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "langchain-openai>=1.1.0,<2.0.0",
    "langchain-text-splitters>=1.0.0,<2.0.0",
    "langgraph>=1.1.0,<2.0.0",
    "networkx>=3.3",
    "pillow>=11.0.0",
    "pymupdf>=1.26.0",
    "pypdf>=6.0.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.5.0",
    "psycopg[binary]>=3.2.0",
    "pyvis>=0.3.2",
    "sentence-transformers>=5.0.0",
    "tiktoken>=0.12.0",
    "bm25>=0.3.9",
    "rank-bm25>=0.2.2",
    "langsmith>=0.9.8",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.34.0",
    "slowapi>=0.1.10",
    "pytest>=9.1.1",
]
