[project]
name = "production-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # LangChain core stack
    "langchain>=1.2.0,<2.0.0",
    "langchain-core>=1.3.0,<2.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "langchain-openai>=1.1.0,<2.0.0",
    "langchain-classic>=1.0.0",
    "langgraph>=1.1.0,<2.0.0",
    "langsmith>=0.9.8",
    # Database
    "psycopg[binary]>=3.2.0",
    # LLM tokenization
    "tiktoken>=0.12.0",
    # Config / runtime
    "python-dotenv>=1.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    # API server
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.34.0",
    "slowapi>=0.1.10",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
